refactor(View) : 메소드 Game으로 이동